--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
         <a class="navbar-brand" href="#">Elangwane</a>
@@ -36,7 +39,7 @@
     </div>
   </nav>
 </header>
-
+  
 <main role="main">
 
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
