--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <main role="main">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <div class="container-fluid">
     <div class="carousel slide" data-ride="carousel" id="carousel">
@@ -56,9 +56,18 @@
             <li data-target="#carousel" data-slide to="2"></li>
         </ol>
         <div class="carousel-inner">
+          
             <div class="item active">
-                <img src="https://f1.media.brightcove.com/8/4495439099001/4495439099001_5325814229001_5305215728001-vs.jpg?pubId=4495439099001&videoId=5305215728001">
+                <img src="Images/Display4.jpg" width="100%">
+                <div class="container">
+                  <div class="carousel-caption text-left">
+                    <h1>Welcome.</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#More" role="button">Learn More &raquo;</a></p>
+                  </div>
+                </div>
             </div>
+          
             <div class="item">
                 <img src="http://www.asianews.it/files/img/INDIA_-_0907_-_Vescovo_di_Vasai_su_MT.jpg">
             </div>
