--- a/index.html
+++ b/index.html
@@ -48,11 +48,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <div id="#carousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carousel" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel" data-slide-to="1"></li>
-      <li data-target="#carousel" data-slide-to="2"></li>
-    </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="Images/Display4.jpg" width="100%">
@@ -64,37 +59,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="Images/Display3.jpg" width="100%">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>About Us.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="About.html" role="button">Learn more &raquo;</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="Images/Display4.jpg" width="100%">
-        <div class="container">
-          <div class="carousel-caption text-right">
-            <h1>One more for good measure.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="curriculum.html" role="button">Browse Curriculum</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only"></span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only"></span>
-    </a>
-  </div>
-
+      
   <div class="container marketing">
 
     <!-- Three columns of text below the carousel -->
@@ -124,6 +89,16 @@
 
     <hr class="featurette-divider">
 
+    <div class="row featurette">
+    		<div class="col-md-7">
+        		<h2 class="featurette-heading">A Word From Our Principal.</h2>
+        		<p class="lead" style="text-align: left;">&ldquo;Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. &rdquo; - MR D.J Ngwenya</p>
+      		</div>
+      		<div class="col-md-5">
+        		<img src="Images/Principal.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+      		</div>
+    	</div>
+    
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">A Message From The Secretary Of Education</h2>
