--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
           </div>
         </div>
       </div>
-      
+    </div>
+  </div>
+  
   <div class="container marketing">
 
     <!-- Three columns of text below the carousel -->
