--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
           <div class="carousel-caption text-left">
             <h1>Welcome.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p>A very warm welcome to Elangwane M.S.T Academy, I hope that our website provides you with a comprehensive introduction to our values, expectations and way of working. We place a strong emphasis on working hard, supporting one another and good standards of behaviour and courtesy.</p>
             <p><a class="btn btn-lg btn-primary" href="#More" role="button">Learn More &raquo;</a></p>
           </div>
         </div>
@@ -69,19 +69,19 @@
       <div class="col-lg-4">
         <img src="Images/Display1.jpg" width="140" height="140" class="rounded-circle">
         <h2>Curriculum</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+        <p>We have a special curriculum that focuses on STM(Science,Technology and MAthematics) subjects, We currently offer Physical Sciences, CAT, Accounting and more.</p>
         <p><a class="btn btn-primary" href="curriculum.html" role="button">View More! &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Images/Display2.jpg" width="140" height="140" class="rounded-circle">
-        <h2>Learner Representetive Council</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <h2>Representative Council of Learners</h2>
+        <p>The RCL is a legislated body, whose purpose is to ensure that student opinion on the running of the school is heard and noted.</p>
         <p><a class="btn btn-primary" href="LRC.html" role="button">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Images/Display3.jpg" width="140" height="140" class="rounded-circle">
         <h2>Sports</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p>We don't have any sporting events at the time of this writting as lockdown restrictions are still in place to ensure the safety of our learners</p>
         <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
@@ -115,23 +115,11 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
+        <h2 class="featurette-heading">Head of SGB.</h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="Images/Display2.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5">
-        <img src="Images/Display4.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
