--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
     <hr class="featurette-divider">
     
     <div class="row featurette">
-      <div class="col-md-7">
+      <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">A Message From The Secretary Of Education</h2>
         <p class="lead">"We cannot and must not tolerate failing schools. We need to stop making excuses and get on with the business of fixing our schols. We have the unique opportunity to do what is best for our children. This should be our great patriotic cause-our national mission is: Giving all our children a world-class education by putting standards of excellence into action"</p>
       </div>
-      <div class="col-md-5">
-        <img src="https://www.education.gov.za/portals/0/Images/Minister%20Motshekga.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+      <div class="col-md-5 order-md-1">
+        <img src="https://www.education.gov.za/portals/0/Images/Minister%20Motshekga.jpg" alt="Minister of basic education" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
