--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="col-lg-4">
         <img src="Images/Display1.jpg" width="140" height="140" class="rounded-circle">
         <h2>Curriculum</h2>
-        <p>We have a special curriculum that focuses on STM(Science,Technology and MAthematics) subjects, We currently offer Physical Sciences, CAT, Accounting and more.</p>
+        <p>We have a special curriculum that focuses on STM(Science,Technology and Mathematics) subjects, We currently offer Physical Sciences, CAT, Accounting and more.</p>
         <p><a class="btn btn-primary" href="curriculum.html" role="button">View More! &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
