--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+      <div class="col-md-7">
         <h2 class="featurette-heading">Head of SGB.</h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
-      <div class="col-md-5 order-md-1">
+      <div class="col-md-5">
         <img src="Images/Display2.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
