--- a/About.html
+++ b/About.html
@@ -56,7 +56,7 @@
 				<div class="container">
           			<div class="carousel-caption text-center">
             			<h1>More About US</h1>
-            			<p>To learn more about our school&rsquo;s Values And Ethos, Achievements, Goals and what set&rsquo;s us apart be sure to read below.</p>
+            			<p>To learn more about our school&rsquo;s Values. Ethos, Achievements, Goals and what set&rsquo;s us apart be sure to read below.</p>
             			<p><a class="btn btn-lg btn-primary" href="#More" role="button">Learn More</a></p>
           			</div>
         		</div>
