--- a/About.html
+++ b/About.html
@@ -67,9 +67,7 @@
 
 	<main role="main" class="container">
 
-    	<hr class="featurette-divider" id="More">
-
-			<div>
+			<div id="More">
 				<h1>Vision</h1>
 				<ul>
 					<li><p class="lead">Leading a nation that transforms and develops in education : keen in participationg in scientific, economic, societal and environmental issues</p></li>
