--- a/About.html
+++ b/About.html
@@ -87,7 +87,7 @@
 
 			<div>
 				<h1>Values</h1>
-				<ul>
+				<ul style="list-style: none;">
 					<li><p class="lead"> Fairness </p></li>
 					<li><p class="lead"> Openness </p></li>
 					<li><p class="lead"> Transformation </p></li>
