--- a/About.html
+++ b/About.html
@@ -88,11 +88,11 @@
 			<div>
 				<h1>Values</h1>
 				<ul style="list-style: none;">
-					<li><p> Fairness </p></li>
-					<li><p> Openness </p></li>
-					<li><p> Transformation </p></li>
-					<li><p> Trust </p></li>
-					<li><p> Collaboration </p></li>
+					<li><p class="lead"> Fairness </p></li>
+					<li><p class="lead"> Openness </p></li>
+					<li><p class="lead"> Transformation </p></li>
+					<li><p class="lead"> Trust </p></li>
+					<li><p class="lead"> Collaboration </p></li>
 				</ul>
 			</div>
 		
