--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 
 		<div>
 			<ul>
-				<li>E-mail us @<a href="seansthomo@gmail.com">Elangwane</a></li>
+				<li>E-mail us @<a href="mailto:seansthomo@gmail.com">Elangwane</a></li>
 				<li>Facebook page @<a href="Facebook.com/Elangwane Secondary School">Elangwane Secondary School</a></li>
 				<li>Call Us @<a href="0780175037">0780175037</a></li>
 			</ul>
