--- a/About.html
+++ b/About.html
@@ -114,7 +114,7 @@
 
 		<footer class="container">
    	 		<p class="float-right"><a href="#">Back to top</a></p>
-  	  		<p class="float-left">&copy; Siphesihle Thomo &middot;</p>
+  	  		<p class="float-left">&copy;<a href="mailto:seansthomo@gmail.com">Siphesihle Thomo &middot;</p>
   		</footer>
 	</main>
 	
