--- a/About.html
+++ b/About.html
@@ -6,6 +6,8 @@
     	<meta name="description" content="About Elangwane, Elangwane, Mpumalanga MSTA, Volksust High Schools, Vukuzakhe High School">
     	<meta name="author" content="Siphesihle Thomo">
 	<title>Elangwane M.S.T.A</title>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link href="styles.css" rel="stylesheet">
 	<style type="text/css">
 		p, h1 {
