--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
     	<meta name="author" content="Siphesihle Thomo">
 	<title>Elangwane M.S.T.A</title>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link href="styles.css" rel="stylesheet">
 	<style type="text/css">
 		p, h1 {
@@ -116,7 +116,7 @@
 
 		<footer class="container">
    	 		<p class="float-right"><a href="#">Back to top</a></p>
-  	  		<p class="float-left">&copy;<a href="mailto:seansthomo@gmail.com">Siphesihle Thomo &middot;</p>
+  	  		<p class="float-left">Website built by &copy;<a href="mailto:seansthomo@gmail.com">Siphesihle Thomo &middot;</p>
   		</footer>
 	</main>
 	
