--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy;<a href="mailto:seansthomo@gmail.com"> Siphesihle Thomo &middot;</p>
+    <p>Website built by &copy; <a href="mailto:seansthomo@gmail.com">Siphesihle Thomo &middot;</p>
   </footer>
 </main>
 
