--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Elangwane Contact, Contact Elangwane, Mpumalanga MSTA, Volksust High Schools, Vukuzakhe High School">
-    <meta name="author" content="Siphesihle Thomo">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    	<meta name="description" content="Elangwane Contact, Contact Elangwane, Mpumalanga MSTA, Volksust High Schools, Vukuzakhe High School">
+    	<meta name="author" content="Siphesihle Thomo">
 	<title>Elangwane M.S.T.A</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link href="styles.css" rel="stylesheet">
 	<style type="text/css">
 		h1 {
@@ -84,9 +85,9 @@
 
 		<hr class="featurette-divider">
 
-    	<footer class="container">
+    		<footer class="container">
    		 	<p class="float-right"><a href="#">Back to top</a></p>
-    		<p>&copy; Siphesihle Thomo &middot; </p>
+    			<p>Website built by &copy;<a href="mailto:seansthomo@gmail.com"> Siphesihle Thomo &middot; </p>
   		</footer>
 	</main>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
