--- a/About.html
+++ b/About.html
@@ -73,7 +73,7 @@
 				<h1>Vision</h1>
 				<ul>
 					<li><p class="lead">Leading a nation that transforms and develops in education : keen in participationg in scientific, economic, societal and environmental issues</p></li>
-					<li><p class="lead">Through providing profound acquisition of skills and knowledge in scientifuic, mathematical, technological and economical fields: that is delivered in a clean, safe, carinf and respectful environment</p></li>
+					<li><p class="lead">Through providing profound acquisition of skills and knowledge in scientific, mathematical, technological and economical fields: that is delivered in a clean, safe, caring and respectful environment</p></li>
 					<li><p class="lead">Development of the school improvement plan which will be preceded by swot analyses of different phases to determine circumstances that led to their end of the year academic performance </p></li>
 				</ul>
 			</div>
