--- a/About.html
+++ b/About.html
@@ -72,9 +72,9 @@
 			<div id="More">
 				<h1>Vision</h1>
 				<ul>
-					<li><p class="lead">Leading a nation that transforms and develops in education : keen in participationg in scientific, economic, societal and environmental issues</p></li>
-					<li><p class="lead">Through providing profound acquisition of skills and knowledge in scientific, mathematical, technological and economical fields: that is delivered in a clean, safe, caring and respectful environment</p></li>
-					<li><p class="lead">Development of the school improvement plan which will be preceded by swot analyses of different phases to determine circumstances that led to their end of the year academic performance </p></li>
+					<li><p class="lead">Leading a nation that transforms and develops in education : keen in participating in scientific, economic, societal and environmental issues. </p></li>
+					<li><p class="lead">Through providing profound acquisition of skills and knowledge in scientific, mathematical, technological and economical fields: that is delivered in a clean, safe, caring and respectful environment. </p></li>
+					<li><p class="lead">Development of the school improvement plan which will be preceded by SWOT analyses of different phases to determine circumstances that led to their end of the year academic performance. </p></li>
 				</ul>
 			</div>
 		
@@ -82,12 +82,11 @@
 
 			<div>
 				<h1>Mission</h1>
-				<p class="lead">The school community commits itself in working on time and hard in: unity and through consultation in achieving its vision delivering the service required to its clients</p>
+				<p class="lead">The school community commits itself in working on time and hard in: unity and through consultation in achieving its vision delivering the service required to its clients. </p>
 			</div>
 		
 			<hr class="featurette-divider">
 
-			<div>
 				<h1>Values</h1>
 				<ul style="list-style: none;">
 					<li><p class="lead"> Fairness </p></li>
@@ -96,7 +95,6 @@
 					<li><p class="lead"> Trust </p></li>
 					<li><p class="lead"> Collaboration </p></li>
 				</ul>
-			</div>
 		
 			<hr class="featurette-divider">
 
