--- a/LRC.html
+++ b/LRC.html
@@ -56,7 +56,6 @@
 
 	<hr class="featurette-divider">
 	<h1 style="text-align: center;">Our Executive</h1>
-	<hr class="featurette-divider">
 
     <div class="row featurette">
       <div class="col-md-7">
@@ -122,7 +121,7 @@
      <!-- FOOTER -->
   		<footer class="container">
     		<p class="float-right"><a href="#">Back to top</a></p>
-    		<p>&copy; Siphesihle Thomo &middot;</p>
+    		<p>Website built by &copy;<a href="mailto:seansthomo@gmail.com"> Siphesihle Thomo &middot;</p>
   		</footer>
 	</main>
 
