--- a/curriculum.html
+++ b/curriculum.html
@@ -68,7 +68,7 @@
   <main role="main" class="container" id="More">
 	<div>
 		<h1>Our Curriculum</h1>
-		<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.</p>
+		<p class="lead">Our curriculum offers these core subjects: 2 languages(IsiZulu and English), Life Orientation, Mathematics and Physical Sciences. Our choice subjects include : Life Sciences, CAT or I.T, Accounting and Geography. You can only choose 2 from our choice subjects.</p>
 	</div>
 
 			<hr class="featurette-divider">
