--- a/contact.html
+++ b/contact.html
@@ -54,33 +54,14 @@
 	<main role="main" class="container" id="More">
 		<div>
 			<h1>Contact Details</h1>
-			<p>Be sure to contact us if you need more information or if some information is unclear. You can contact us by leaving a message at the bottom of the site or at the following platforms :</p>
+			<p>Be sure to contact us if you need more information or if some information is unclear. You can contact us at the following platforms :</p>
 		</div>
 
 		<div>
 			<ul>
-				<li>E-mail us @<a href="mailto:seansthomo@gmail.com">Elangwane</a></li>
-				<li>Facebook page @<a href="Facebook.com/Elangwane Secondary School">Elangwane Secondary School</a></li>
-				<li>Call Us @<a href="0780175037">0780175037</a></li>
+				<li>E-mail us @ <a href="mailto:seansthomo@gmail.com">Elangwane</a></li>
+				<li>Call Us @ <a href="0780175037">0780175037</a></li>
 			</ul>
-		</div>
-
-		<hr class="featurette-divider">
-		<div class="container jumbotron">
-			<form action="https://formspree.io/seansthomo@gmail.com" method="POST" enctype="text/plain" id="send-email">
-				<label for="fName">First Name :</label><br>
-				<input type="text" name="firstname" id="fName" placeholder="Your Name..." style="width: 50%" >
-				<br><br>
-
-				<label for="lName">Last Name :</label><br>
-				<input type="text" name="Lastname" id="lName" placeholder="Your Surname..." style="width: 50%" >
-				<br><br>
-				
-				<label for="subject">Message :</label><br>
-				<textarea id="subject" name="subject" placeholder="Write your message/ question here..." style="width:50%; height:200px"></textarea>
-				<br><br>
-				<input class="btn btn-lg btn-primary" role="button" type="submit" value="Send">
-			</form>
 		</div>
 
 		<hr class="featurette-divider">
