--- a/curriculum.html
+++ b/curriculum.html
@@ -76,7 +76,7 @@
 	<div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Information Technology</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Information technology is the study, design, development, implementation, support or management of computer-based information systems—particularly software applications and computer hardware.</p>
       </div>
       <div class="col-md-5">
         <img src="Images/I.T.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
@@ -88,7 +88,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Accounting</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Accounting is the process of recording financial transactions pertaining to a business. The accounting process includes summarizing, analyzing and reporting these transactions to oversight agencies, regulators and tax collection entities.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="Images/Accounting.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
@@ -100,7 +100,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Computer Applications Technology</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">CAT teaches students about the various components involved in computer systems, as well as an introduction into how to use computers effectively in every day situations.</p>
       </div>
       <div class="col-md-5">
         <img src="Images/CAT.png" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
@@ -111,8 +111,8 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Creative Arts</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Life Sciences</h2>
+        <p class="lead">Life sciences is the study of living organisms. It deals with every aspect of living organisms, from the biology of cells, to the biology of individual organisms, to how these organisms interact with other organisms and their environment.</p>
       </div>
       <div class="col-md-5">
         <img src="Images/Art2.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
