--- a/curriculum.html
+++ b/curriculum.html
@@ -79,7 +79,7 @@
         <p class="lead">Information technology is the study, design, development, implementation, support or management of computer-based information systems—particularly software applications and computer hardware.</p>
       </div>
       <div class="col-md-5">
-        <img src="Images/I.T.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/I.T.jpg" alt="Programming"class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -91,7 +91,7 @@
         <p class="lead">Accounting is the process of recording financial transactions pertaining to a business. The accounting process includes summarizing, analyzing and reporting these transactions to oversight agencies, regulators and tax collection entities.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="Images/Accounting.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Accounting.jpg" alt="The Accounting Cycle" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -103,7 +103,7 @@
         <p class="lead">CAT teaches students about the various components involved in computer systems, as well as an introduction into how to use computers effectively in every day situations.</p>
       </div>
       <div class="col-md-5">
-        <img src="Images/CAT.png" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/CAT.png" alt="CAT textbook" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -115,7 +115,7 @@
         <p class="lead">Life sciences is the study of living organisms. It deals with every aspect of living organisms, from the biology of cells, to the biology of individual organisms, to how these organisms interact with other organisms and their environment.</p>
       </div>
       <div class="col-md-5">
-        <img src="Images/Art2.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftechxplore.com%2Fnews%2F2020-04-life-science-health-discoveries-insights.html&psig=AOvVaw0PWhf9jAaH5TEjJDAqnqnW&ust=1614799604193000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLD6-82rku8CFQAAAAAdAAAAABAD" alt="Sci-fi Image of the human body" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
