--- a/curriculum.html
+++ b/curriculum.html
@@ -115,7 +115,7 @@
         <p class="lead">Life sciences is the study of living organisms. It deals with every aspect of living organisms, from the biology of cells, to the biology of individual organisms, to how these organisms interact with other organisms and their environment.</p>
       </div>
       <div class="col-md-5">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftechxplore.com%2Fnews%2F2020-04-life-science-health-discoveries-insights.html&psig=AOvVaw0PWhf9jAaH5TEjJDAqnqnW&ust=1614799604193000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLD6-82rku8CFQAAAAAdAAAAABAD" alt="Sci-fi Image of the human body" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRs2gXWp_ywT4nuzA2VdcL_4iIqVIg10f9vNA&usqp=CAU" alt="Sci-fi Image of the human body" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
