--- a/LRC.html
+++ b/LRC.html
@@ -49,7 +49,7 @@
 			<br>
 			<h1 style="text-align: center;">Learner Representetive Council</h1>
 			<br>
-			<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+			<p>The RCL is a legislated body, whose purpose is to ensure that student opinion on the running of the school is heard and noted. Three representatives are elected from each grade, and two of these representatives sit on the School's Governing Body.</p>
 		</div>
 		
 		<!-- THE FEATURETTES -->
