--- a/LRC.html
+++ b/LRC.html
@@ -109,7 +109,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Our Treasurer</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">...</p>
       </div>
       <div class="col-md-5">
         <img src="Images/Display4.jpg" alt="Our Treasurer" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
